2009-06-28  Stas Boukarev  <stassats@gmail.com>

	* swank-openmcl.lisp (compiler-warning-short-message): In new
	versions of CCL `compiler-warning-nrefs' slot
	of the `compiler-warning' class is now a list, not an integer.

2009-06-25  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Profiling support by Marko Kocić

2009-06-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-beginning-of-symbol): Skip over #., #-, and #+.
	([test] symbol-at-point.15 .. 17): Test it.

2009-06-24  Nikodemus Siivola <nikodemus@random-state.net>

	Add :WAIT keyword argument to support blocking in
	SWANK:INSPECT-IN-EMACS.

	* swank.lisp (inspect-in-emacs): added keyword argument :wait.
	
	* slime.el (slime-dispatch-event): if swank requests response to
	:inspect, add a hook to the inspector to signal swank once done.
	(slime-open-inspector): add optional hook argument to be added as
	local kill-buffer-hook.
	

2009-06-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-initialize-lisp-buffer-for-test-suite): Moved to
	contrib/slime-fontifying-fu.el

2009-06-21  Helmut Eller  <heller@common-lisp.net>
	Don't try so hard to get symbol-at-point right.
	The old implementation was complicated and didn't even pass it's
	own test suite.  The new version is less ambitious but simpler.

	* slime.el (slime-symbol-at-point, slime-beginning-of-symbol)
	(slime-end-of-symbol): Simplify.
	(slime-exit-vertical-bars, slime-symbol-constituent-at): Deleted.
	([test] symbol-at-point.1 .. symbol-at-point.14): Renamed form
	fancy-symbol-names and split up into smaller peices.
	(slime-test-symbols): New.
	(slime-check-symbol-at-point): Renamed from
	slime-check-fancy-symbol-name.

2009-06-21  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (frame-source-location): Renamed from
	frame-source-location-for-emacs.

2009-06-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-check-fancy-symbol-name): Don't update the loop
	index inside the loop body.
